Create stats.fancy
* create new module
* let monitor.statistics use stats.fancy
* update poms and scripts to compile and run stats.fancy
* update README